--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title>
+<title>Thunder Microcredit LLC</title>
 <meta charset="utf-8">
 <meta name = "format-detection" content = "telephone=no" />
 <link rel="icon" href="images/favicon.ico">
@@ -117,7 +117,7 @@
     </div>
     <div class="grid_3 fwn">
       <div class="text1">Say what you need and we’ll do it for you!</div>
-      Read about this <strong><a href="#/free-website-templates/" rel="nofollow">free theme</a></strong> on our official blog. <br> To find the whole collection of <strong><a href="#properties/topic/design-photography/" rel="nofollow">templates for design companies</a></strong>, visit TemplateMonster.com <br>
+      Read about this <strong><a href="#/free-website-templates/" rel="nofollow">free theme</a></strong> on our official blog. <br> To find the whole collection of <strong><a href="#properties/topic/design-photography/" rel="nofollow">cases</a></strong>, visit www.tmcltd.net<br>
       <a href="#" class="btn">read more</a>
     </div>
       <div class="clear"></div>
@@ -215,15 +215,14 @@
       </div>
       <div class="grid_5">
         <div class="text2">Our Address</div>
-        <p class="fz__1">Lorem ipsum dolor sit amet, consecteturpiscinger elit um dolor sit amet, consecteturpiscing. </p>
-        <p>Our <strong><a href="#" rel="nofollow">premium templates</a></strong> go with 24/7 support. </p>
-        <p>If you have any questions about customization of <strong><a href="#/free-website-templates/ " rel="nofollow">freebies</a></strong>, address to <strong><a href="#" rel="nofollow">TemplateTuning</a></strong>. Note that it's a paid service.</p>
-        The Company Name Inc. <br>
-        9870 St Vincent Place, <br>
-        Glasgow, DC 45 Fr 45. <br>
-        Telephone: +1 800 603 6035 <br>
-        FAX: +1 800 889 9898 <br>
-        E-mail: <a href="#">mail@demolink.org</a>
+
+        <p>Our <strong><a href="#" rel="nofollow">service</a></strong> goes with 24/7 support. </p>
+
+        Thunder Microcredit LLC <br>
+        3500 South Dupont Highway Dover, <br>
+        Kent County Delaware 19901 U.S.A.<br>
+        Telephone: +1 302-608-9014 <br>
+        E-mail: <a href="#">admin@tmcltd.net</a>
       </div>
       <div class="grid_6 prefix_1">
         <div class="text2">Write Us</div>
@@ -282,8 +281,8 @@
 <footer id="footer">
   <div class="container_12">
     <div class="grid_12"> 
-      <div class="copyright"><span class="color1">DSGN</span> &copy; <span id="copyright-year">2014</span> | <a href="#">Privacy Policy </a>
-       <div class="sub-copy">Website designed by TemplateMonster.com</div>
+      <div class="copyright"><span class="color1">Thunder Microcredit LLC</span> &copy; <span id="copyright-year">2018</span> | <a href="#">Privacy Policy </a>
+       <div class="sub-copy">© 2018 Thunder Microcredit LLC all rights reserved</div>
       </div>
     </div>
   </div>  
