--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
     <div class="grid_3 fwn">
       <div class="text1">Say what you need and we’ll do it for you!</div>
-      Read about this <strong><a href="#/free-website-templates/" rel="nofollow">free theme</a></strong> on our official blog. <br> To find the whole collection of <strong><a href="#properties/topic/design-photography/" rel="nofollow">cases</a></strong>, visit www.tmcltd.net<br>
+      Read about this <strong><a href="#/free-website-templates/" rel="nofollow">service</a></strong> on our official blog. <br> To find the whole collection of <strong><a href="#properties/topic/design-photography/" rel="nofollow">cases</a></strong>, visit www.tmcltd.net<br>
       <a href="#" class="btn">read more</a>
     </div>
       <div class="clear"></div>
@@ -310,5 +310,3 @@
         </script>
 </body>
 </html>
-
-  
