--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="grid_5">
         <div class="text2">Our Address</div>
 
-        <p>Our <strong><a href="#" rel="nofollow">service</a></strong> goes with 24/7 support. </p>
+        <p>Our <strong><a href="#" rel="nofollow">services</a></strong> goes with 24/7 support. </p>
 
         Thunder Microcredit LLC <br>
         3500 South Dupont Highway Dover, <br>
